--- a/app/src/main/res/drawable/priority_indicator_background.xml
+++ b/app/src/main/res/drawable/priority_indicator_background.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="2dp" />
-    <solid android:color="@color/priority_low" />
+    <size android:width="8dp" />
+    <!-- Soft rounded corners -->
+    <corners android:radius="8dp" />
+    <!-- Modern gradient look -->
+    <gradient
+        android:angle="135"
+        android:endColor="?attr/colorSecondaryVariant"
+        android:startColor="?attr/colorSecondary"
+        android:type="linear" />
+    <!-- Shadow effect -->
+    <padding
+        android:bottom="1dp"
+        android:left="1dp"
+        android:right="1dp"
+        android:top="1dp" />
 </shape>
