--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <item
-        android:id="@+id/action_theme_toggle"
-        android:title="@string/toggle_theme"
-        android:icon="@drawable/ic_theme_toggle"
+        android:id="@+id/action_theme"
+        android:title="@string/dark_mode"
+        android:icon="@android:drawable/ic_menu_day"
+        android:checkable="true"
+        android:checked="true"
         app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/action_delete_completed"
-        android:title="@string/delete_completed_tasks"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/action_delete_all"
-        android:title="@string/delete_all_tasks"
-        app:showAsAction="never" />
-
 </menu>
+
